2009-09-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* BaseDomainPolicy.cs: Add ApplicationRoot property and null the
	value when changing ApplicationUri (happens only when executing
	unit tests - but pretty important for them)
	* ClientAccessPolicy.cs: The Domain URI LocalPath (when provided) 
	restriction is based on	the XAP (not the html) file

	r: sde

2009-09-03  Sebastien Pouliot  <sebastien@ximian.com>

	* ClientAccessPolicy.cs: Fix Domain comparison when the value
	differs from '*'
	* CrossDomainPolicyManager.cs: Expose GetRoot for the unit tests
	* FlashCrossDomainPolicy.cs: Only support Domain='*' like SL does
	and fix Secure property on AllowHttpRequestHeadersFrom

	r: andreia

2009-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* FlashCrossDomainPolicy.cs: Secure policy (default) means that
	only https:// apps can access https:// urls. However file:// apps
	can still access http:// urls.

	re: jackson

2009-08-27  Sebastien Pouliot  <sebastien@ximian.com> 

	* BaseDomainPolicy.cs: Fix comparison of header values so that
	SOAPAction != SOAPActionX while SOAPAction* == SOAPActionX

	re: toshok

2009-08-27  Sebastien Pouliot  <sebastien@ximian.com>

	* ClientAccessPolicy.cs: Fix the invalid path characters check in
	the query part. Be more compatible with SL (to the extent we 
	know) with the special case for unrestricted paths.
	* CrossDomainPolicyManager.cs: Avoid displaying policies errors
	on the console when it occurs from duplicate cached entries

	re: alan

2009-08-10  Chris Toshok  <toshok@ximian.com>

	* BrowserHttpWebRequestInternal.cs: make progress_delegate
	internal so BrowserHttpWebRequest can set it.

	* BrowserHttpWebRequest.cs (GetResponse): pass along our progress
	delegate to the internal webrequest.

2009-07-21  Sebastien Pouliot  <sebastien@ximian.com>

	* ClientAccessPolicyParser.cs, FlashCrossDomainPolicyParser.cs:
	Silverlight accepts policies from (invalid) XML stream that starts
	with whitespaces.
